samples/_failures_safe/1761040412_b68fcb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_df7f68b5.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_df7f68b5.c:143:21: error: expected expression at end of input
  143 |                     return
      |                     ^~~~~~
./samples/SAFE/__tmp_df7f68b5.c:143:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_df7f68b5.c:143:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_df7f68b5.c:143:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_df7f68b5.c:143:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_df7f68b5.c:143:21: error: expected declaration or statement at end of input
